--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     </h1>
         
                     <div class="btns">
-                        <a href="#" class="btn-download">Download CV in PDF</a>
-                        <a href="#" class="btn-contact">Contact me</a>
+                        <a href="#" class="btn">Download CV in PDF</a>
+                        <a href="#" class="btn">Contact me</a>
                     </div>
 
                 </div>
