--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 </div>
                 
                 <nav class="nav">
-                    <a href="#">Home</a> 
-                    <a href="#">My team projects</a>
-                    <a href="#">My personal projects</a>
-                    <a href="#">Code Examples</a>
+                    <a href="#" class="nav-item active">Home</a> 
+                    <a href="#" class="nav-item">My team projects</a>
+                    <a href="#" class="nav-item">My personal projects</a>
+                    <a href="#" class="nav-item">Code Examples</a>
                 </nav>
 
             </div>
