Begin content block implementation

--- a/index.html
+++ b/index.html
@@ -39,6 +39,41 @@
     </header>
 
     <main class="content">
+        <div class="wrapper">
+            <div class="content-title">
+                
+            </div>
+
+            <div class="container">
+                <p class="intro">
+                    Hi, my name is Alexandr and I am
+                    FrontEnd, BackEnd & UI Developer
+                </p>
+            </div>
+        </div>
+
+        <div class="wrapper">
+            <div class="content-title">
+                <h3>About</h3>
+            </div>
+
+            <div class="container">
+                <ul>
+                    <li>name:<span>Alexandr</span></li>
+                    <li>nationality:<span>russian</span></li>
+                    <li>age:<span>37 years old</span></li>
+                    <li>gender:<span>male</span></li>
+                    <li>marital status:<span>married</span></li>
+                    <li>languages:<span>russian, english</span></li>
+                    <li>skype:<span></span></li>
+                    <li>e-mail:<span></span></li>
+                    <li>mobile:<span></span></li>
+                    <li>Desirable job position:<span>Front End / UI developer</span></li>
+                    <li><span>Current location:</span></li>
+                    <li><span>Total experience:</span>since 2003</li>
+                </ul>
+            </div>
+        </div>
 
     </main>
 
