--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <header class="header">
         <div class="wrapper" >
-            <div>
-                
+            <div class="stub">    
             </div>
             
             <div class="container">
