--- a/index.html
+++ b/index.html
@@ -82,6 +82,17 @@
             </div>
         </div>
 
+        <div class="wrapper">
+            <div class="content-title">
+                <h3>Skills</h3>
+            </div>
+
+            <div class="container">
+                
+                
+            </div>
+        </div>
+
     </main>
 
     <footer class="footer">
