add content for section skills

--- a/index.html
+++ b/index.html
@@ -88,6 +88,57 @@
             </div>
 
             <div class="container">
+                <h5>Frontend</h5>
+                <div class="row">
+                    <div class="item">
+                        <h6>JavaScript</h6>
+                        <ul>
+                            <li><span>Native JavaScript (ES5, ES6), TypeScript</span> </li>
+                            <li>Reactive interfaces: <span>React(FLUX,REDUX) with TypeScript, Riot</span></span></li>
+                            <li>MVC/MVVM frameworks: <span>Angular, Knockout, Backbone</span> </li>
+                            <li>JS templates: <span>Lodash/Underscore, Handlebars, Mustache</span></li>
+                            <li>WebSocket and Native Canvas</li>
+                            <li>Canvas animation frameworks: <span>CreateJS, PlayCanvas</span></li>
+                        </ul>
+                    </div>
+
+                    <div class="item">
+                        <h6>HTML</h6>
+                        <span>HTML, HTML5, XML</span>
+                        <h6>CSS</h6>
+                        <ul>
+                            <li><span>CSS2.1, CSS3</span> </li>
+                            <li><span>LESS, SASS</span> </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <h5>Back-End</h5>
+                <div class="row">
+                    <div class="item">
+                        <h6>PHP</h6>
+                        <ul>
+                            <li><span>Native PHP</span></li>
+                            <li><span>CakePhp Framework</span></li>
+                            <li><span>CMS as WordPress, LiveStreet, Joomla, OpenCart</span></li>
+                            <li><span>Apache</span></li>
+                        </ul>
+                        <h6>Python</h6>
+                        <span>Flask</span>
+                        <h6>NodeJs</h6>
+                        <span>Npm, Gulp, Bower, SocketIo, Express</span>
+
+                    </div>
+                    <div class="item">
+                        <h6>DataBase</h6>
+                        <ul>
+                            <li><span>MySQL</span></li>
+                            <li><span>PhpMyAdmin</span></li>
+                            <li><span>PDO</span></li>
+                            <li><span>ORM</span></li>
+                        </ul>
+                    </div>
+                </div>
                 
                 
             </div>
