Finish aducation section

--- a/index.html
+++ b/index.html
@@ -150,8 +150,15 @@
             </div>
 
             <div class="container">
-                
-                
+                <ul>
+                    <li><a href="https://www.vlsu.ru/">Vladimir State University, 2005-2010</a></li>
+                    <li>specialization: <span>Sequrity of information</span> </li>
+                </ul>     
+                <ul>
+                    <li><span>Mechanical engineering college, Kirzhach, 2001-2005</span> </li>
+                    <li>specialization: <span> Software & automated systems</span> </li>
+                </ul>  
+                <a href="https://stepik.org/cert/71462" target="_blank">Bioinformatics Institute: Python programming</a>          
             </div>
         </div>
 
