change aducation section

--- a/index.html
+++ b/index.html
@@ -158,7 +158,20 @@
                     <li><span>Mechanical engineering college, Kirzhach, 2001-2005</span> </li>
                     <li>specialization: <span> Software & automated systems</span> </li>
                 </ul>  
+                <h6>Certificates:</h6>
+                <a href="https://stepik.org/cert/96405" target="_blank">Bioinformatics Institute: Python basics and application</a> 
                 <a href="https://stepik.org/cert/71462" target="_blank">Bioinformatics Institute: Python programming</a>          
+                <a href="https://stepik.org/cert/79851" target="_blank">Mail.ru: Web technologies</a>
+            </div>
+        </div>
+
+        <div class="wrapper">
+            <div class="content-title">
+                <h3>Experience</h3>
+            </div>
+
+            <div class="container">
+                        
             </div>
         </div>
 
