--- a/index.html
+++ b/index.html
@@ -173,31 +173,31 @@
             <div class="container">
                 <ul>
                     <li>
-                        <a href="https://ezan.ac.ru/">ФГУП ЭЗАН</a>          
+                        <a href="https://ezan.ac.ru/"  target="_blank">ФГУП ЭЗАН</a>          
                         <p><span>2021 - ...</span> </p>
                         <p>System support engineer</p>
                         <br>
                     </li>
                     <li>
-                        <a href="https://trytek.ru/">OOO "Трайтэк"</a>          
+                        <a href="https://trytek.ru/"  target="_blank">OOO "Трайтэк"</a>          
                         <p><span>2015 - 2021</span> </p>
                         <p>Оptical cable splice specialist</p>
                         <br>
                     </li>
                     <li>
-                        <a href="http://www.gorodkirzhach.ru/">МКУ "Управление городским хозяйством"</a>          
+                        <a href="http://www.gorodkirzhach.ru/"  target="_blank">МКУ "Управление городским хозяйством"</a>          
                         <p><span>2012 - 2015</span> </p>
                         <p>Chief Technology Officer</p>
                         <br>
                     </li>
                     <li>
-                        <a href="http://www.russianpost.ru/">УФПС Владимирской области филиал ФГУП "Почта России"</a>          
+                        <a href="http://www.russianpost.ru/"  target="_blank">УФПС Владимирской области филиал ФГУП "Почта России"</a>          
                         <p><span>2008 - 2010</span> </p>
                         <p>Software developer</p>
                         <br>
                     </li>
                     <li>
-                        <a href="http://www.zavod-avtosvet.ru/">ОАО "Завод Автосвет"</a>          
+                        <a href="http://www.zavod-avtosvet.ru/"  target="_blank">ОАО "Завод Автосвет"</a>          
                         <p><span>2004 - 2005</span> </p>
                         <p>Software developer</p>
                     </li>
@@ -211,7 +211,18 @@
     </main>
 
     <footer class="footer">
+        <div class="wrapper">
+            <div class="content-title">
+                <h3>Recomendations</h3>
+            </div>
 
+            <div class="container">
+                <b>Vladimir Putin, President</b>
+                <p>8 800 200 23 16</p>
+                <p>Kremlin, Moscow, Russia</p>
+                <a href="http://www.kremlin.ru/"  target="_blank">www.kremlin.ru</a>
+            </div>
+        </div>
     </footer>
     
 </body>
