--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
                     <a href="#" class="nav-item">Code Examples</a>
                 </nav>
 
+                <div class="mobile-nav">
+                    <div class="menu-button">Button to open</div>
+                    <div class="mobile-nav-items">
+                        <a href="#" class="mobile-nav-item">Home</a> 
+                        <a href="#" class="mobile-nav-item">My team projects</a>
+                        <a href="#" class="mobile-nav-item">My personal projects</a>
+                        <a href="#" class="mobile-nav-item">Code Examples</a>
+                    </div>
+                </div>
+
             </div>
           
         </div>
