Make pop-up menu

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                 </div>
 
-                <nav class="nav">
+                <nav id='navBar' class="nav">
                     <a href="#" class="nav-item active">Home</a>
                     <a href="#about" class="nav-item">About</a>
                     <a href="#skills" class="nav-item">Skills</a>
@@ -277,6 +277,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="js/main.js"></script>
 
 </body>
 
