--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <a name="home"></a>
     <header class="header">
         <div class="mobile-nav">
             <div class="mobile-nav-container">
@@ -18,7 +19,7 @@
             </div>
 
             <div class="mobile-nav-items">
-                <a href="#" class="mobile-nav-item">Home</a>
+                <a href="#home" class="mobile-nav-item">Home</a>
                 <a href="#about" class="mobile-nav-item">About</a>
                 <a href="#skills" class="mobile-nav-item">Skills</a>
                 <a href="#education" class="mobile-nav-item">Education</a>
@@ -32,7 +33,6 @@
 
             <div class="container">
                 <div class="main-title">
-
                     <h1>
                         Full stack developer portfolio main page
                     </h1>
@@ -45,7 +45,7 @@
                 </div>
 
                 <nav id='navBar' class="nav">
-                    <a href="#" class="nav-item active">Home</a>
+                    <a href="#home" class="nav-item active">Home</a>
                     <a href="#about" class="nav-item">About</a>
                     <a href="#skills" class="nav-item">Skills</a>
                     <a href="#education" class="nav-item">Education</a>
