--- a/index.html
+++ b/index.html
@@ -12,65 +12,70 @@
 <body>
     <a name="home"></a>
     <header class="header">
-        <div class="mobile-nav">
-            <div class="mobile-nav-container">
-                <div class="menu-button"></div>
-                <img class="my-mini-photo" src="img/photo-mirror.jpg" alt="My photo">
-            </div>
-
-            <div class="mobile-nav-items">
-                <a href="#home" class="mobile-nav-item">Home</a>
-                <a href="#about" class="mobile-nav-item">About</a>
-                <a href="#skills" class="mobile-nav-item">Skills</a>
-                <a href="#education" class="mobile-nav-item">Education</a>
-                <a href="#experience" class="mobile-nav-item">Experience</a>
-                <a href="#recomendations" class="mobile-nav-item">Recomendations</a>
-            </div>
-        </div>
-        <div class="wrapper">
-            <div class="stub">
-            </div>
-
-            <div class="container">
-                <div class="main-title">
-                    <h1>
-                        Full stack developer portfolio main page
-                    </h1>
-
-                    <div class="btns">
-                        <a href="#" class="btn">Download CV in PDF</a>
-                        <a href="#" class="btn">Contact me</a>
-                    </div>
-
+        <div>
+            <div class="mobile-nav">
+                <div class="mobile-nav-container">
+                    <div class="menu-button"></div>
+                    <img class="my-mini-photo" src="img/photo-mirror.jpg" alt="My photo">
                 </div>
 
-                <nav id='navBar' class="nav">
-                    <a href="#home" class="nav-item active">Home</a>
-                    <a href="#about" class="nav-item">About</a>
-                    <a href="#skills" class="nav-item">Skills</a>
-                    <a href="#education" class="nav-item">Education</a>
-                    <a href="#experience" class="nav-item">Experience</a>
-                    <a href="#recomendations" class="nav-item">Recomendations</a>
-                </nav>
+                <div class="mobile-nav-items">
+                    <a href="#home" class="mobile-nav-item">Home</a>
+                    <a href="#about" class="mobile-nav-item">About</a>
+                    <a href="#skills" class="mobile-nav-item">Skills</a>
+                    <a href="#education" class="mobile-nav-item">Education</a>
+                    <a href="#experience" class="mobile-nav-item">Experience</a>
+                    <a href="#recomendations" class="mobile-nav-item">Recomendations</a>
+                </div>
+            </div>
+            <div class="wrapper">
+                <div class="stub">
+                    <img class="my-photo" src="img/photo.jpg" alt="My photo">
+                </div>
 
+                <div class="container">
+                    <div class="main-title">
+                        <h1>
+                            Full stack developer portfolio main page
+                        </h1>
+
+                        <div class="btns">
+                            <a href="#" class="btn">Download CV in PDF</a>
+                            <a href="#" class="btn">Contact me</a>
+                        </div>
+
+                    </div>
+
+                    <nav id='navBar' class="nav">
+                        <a href="#home" class="nav-item active">Home</a>
+                        <a href="#about" class="nav-item">About</a>
+                        <a href="#skills" class="nav-item">Skills</a>
+                        <a href="#education" class="nav-item">Education</a>
+                        <a href="#experience" class="nav-item">Experience</a>
+                        <a href="#recomendations" class="nav-item">Recomendations</a>
+                    </nav>
+
+                </div>
+            </div>
+        </div>
+        <div class="intro dark-theme">
+            <div class="wrapper">
+                <div class="text-container">
+                    <div class="hi">
+                        <p>Hi</p>
+                    </div>
+                    <div>
+                        <p class="my-name">
+                            My name is Alexandr and <br><span>I am a web developer</span>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
 
     </header>
 
     <main class="content  dark-theme">
-        <div class="wrapper">
-            <div class="content-title">
-                <img class="my-photo" src="img/photo.jpg" alt="My photo">
-            </div>
-
-            <div class="container">
-                <p class="intro">
-                    Hi, my name is Alexandr and I am
-                    FrontEnd, BackEnd & UI Developer
-                </p>
-            </div>
-        </div>
 
         <div class="wrapper">
             <div class="content-title">
