add typeWriter function

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <a name="home"></a>
     <header class="header">
+        <div id="demo"></div>
         <div>
             <div class="mobile-nav">
                 <div class="mobile-nav-container">
@@ -59,16 +60,13 @@
             </div>
         </div>
         <div class="intro dark-theme">
-            <div class="wrapper">
-                <div class="text-container">
-                    <div class="hi">
-                        <p>Hi</p>
-                    </div>
-                    <div>
-                        <p class="my-name">
-                            My name is Alexandr and <br><span>I am a web developer</span>
-                        </p>
-                    </div>
+            <div class="text-container">
+                <div class="hi">
+                    <p id="hi"></p>
+                </div>
+                <div class="my-name">
+                    <p id="my-name"></p>
+                    <p><span id="i-am"></span></p>
                 </div>
             </div>
         </div>
