Change intro text

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 </div>
                 <div class="my-name">
                     <p id="my-name"></p>
+                    <p class="and" id="and"></p>
                     <p><span id="i-am"></span></p>
                 </div>
             </div>
