--- a/index.html
+++ b/index.html
@@ -61,13 +61,11 @@
         </div>
         <div class="intro dark-theme">
             <div class="text-container">
-                <div class="hi">
-                    <p id="hi"></p>
+                <div class="hi" id="hi">
                 </div>
                 <div class="my-name">
-                    <p id="my-name"></p>
-                    <p class="and" id="and"></p>
-                    <p><span id="i-am"></span></p>
+                    <div id="my-name"></div>
+                    <div><span id="i-am"></span><div>
                 </div>
             </div>
         </div>
