change font size

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="my-name">
                     <div id="my-name"></div>
-                    <div><span id="i-am"></span><div>
+                    <div><span id="i-am" class="i-am"></span><div>
                 </div>
             </div>
         </div>
