--- a/index.html
+++ b/index.html
@@ -65,179 +65,189 @@
                 </div>
                 <div class="my-name">
                     <div id="my-name"></div>
-                    <div><span id="i-am" class="i-am"></span><div>
+                    <div><span id="i-am" class="i-am"></span>
+                        <div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
 
     </header>
 
-    <main class="content  dark-theme">
-
-        <div class="wrapper">
-            <div class="content-title">
-                <a name="about"></a>
-                <h3>About</h3>
-            </div>
-
-            <div class="container">
-                <ul>
-                    <li>name: <span>Alexandr</span></li>
-                    <li>nationality: <span>russian</span></li>
-                    <li>age: <span>37 years old</span></li>
-                    <li>gender: <span>male</span></li>
-                    <li>marital status: <span>married</span></li>
-                    <li>languages: <span>russian, english</span></li>
-                </ul>
-                <ul>
-                    <li>skype: <a href="skype:saleyevav?call">saleyevav</a></li>
-                    <li>e-mail: <a href="mailto:saleyevav@yandex.ru">saleyevav@yandex.ru</a></li>
-                    <li>mobile: <a href="tele:+79209076484">+7 (920) 907-64-84</a></li>
-                </ul>
-                <ul>
-                    <li>Desirable job position: <span>Front End / UI developer</span></li>
-                    <li>Current location: <span>Russian Federation, Vladimir region, Kirzhach</span></li>
-                    <li>Total experience: <span>since 2004</span></li>
-                </ul>
-
-            </div>
-        </div>
-
-        <div class="wrapper">
-            <div class="content-title">
-                <a name="skills"></a>
-                <h3>Skills</h3>
-            </div>
-
-            <div class="container">
-                <h5>Frontend</h5>
-                <div class="row">
-                    <div class="item">
-                        <h6>JavaScript</h6>
-                        <ul>
-                            <li><span>Native JavaScript (ES5, ES6), TypeScript</span> </li>
-                            <li>Reactive interfaces: <span>React(FLUX,REDUX) with TypeScript, Riot</span></span></li>
-                            <li>MVC/MVVM frameworks: <span>Angular, Knockout, Backbone</span> </li>
-                            <li>JS templates: <span>Lodash/Underscore, Handlebars, Mustache</span></li>
-                            <li>WebSocket and Native Canvas</li>
-                            <li>Canvas animation frameworks: <span>CreateJS, PlayCanvas</span></li>
-                        </ul>
-                    </div>
-
-                    <div class="item">
-                        <h6>HTML</h6>
-                        <span>HTML, HTML5, XML</span>
-                        <h6>CSS</h6>
-                        <ul>
-                            <li><span>CSS2.1, CSS3</span> </li>
-                            <li><span>LESS, SASS</span> </li>
-                        </ul>
-                    </div>
+    <main class="content">
+        <div class="white-theme">
+            <div class="wrapper">
+                <div class="content-title">
+                    <a name="about"></a>
+                    <h3>About</h3>
                 </div>
 
-                <h5>Back-End</h5>
-                <div class="row">
-                    <div class="item">
-                        <h6>PHP</h6>
-                        <ul>
-                            <li><span>Native PHP</span></li>
-                            <li><span>CakePhp Framework</span></li>
-                            <li><span>CMS as WordPress, LiveStreet, Joomla, OpenCart</span></li>
-                            <li><span>Apache</span></li>
-                        </ul>
-                        <h6>Python</h6>
-                        <span>Flask</span>
-                        <h6>NodeJs</h6>
-                        <span>Npm, Gulp, Bower, SocketIo, Express</span>
+                <div class="container">
+                    <ul>
+                        <li>name: <span>Alexandr</span></li>
+                        <li>nationality: <span>russian</span></li>
+                        <li>age: <span>37 years old</span></li>
+                        <li>gender: <span>male</span></li>
+                        <li>marital status: <span>married</span></li>
+                        <li>languages: <span>russian, english</span></li>
+                    </ul>
+                    <ul>
+                        <li>skype: <a href="skype:saleyevav?call">saleyevav</a></li>
+                        <li>e-mail: <a href="mailto:saleyevav@yandex.ru">saleyevav@yandex.ru</a></li>
+                        <li>mobile: <a href="tele:+79209076484">+7 (920) 907-64-84</a></li>
+                    </ul>
+                    <ul>
+                        <li>Desirable job position: <span>Front End / UI developer</span></li>
+                        <li>Current location: <span>Russian Federation, Vladimir region, Kirzhach</span></li>
+                        <li>Total experience: <span>since 2004</span></li>
+                    </ul>
 
-                    </div>
-                    <div class="item">
-                        <h6>DataBase</h6>
-                        <ul>
-                            <li><span>MySQL</span></li>
-                            <li><span>PhpMyAdmin</span></li>
-                            <li><span>PDO</span></li>
-                            <li><span>ORM</span></li>
-                        </ul>
-                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="dark-theme">
+            <div class="wrapper">
+                <div class="content-title">
+                    <a name="skills"></a>
+                    <h3>Skills</h3>
                 </div>
 
+                <div class="container">
+                    <h5>Frontend</h5>
+                    <div class="row">
+                        <div class="item">
+                            <h6>JavaScript</h6>
+                            <ul>
+                                <li><span>Native JavaScript (ES5, ES6), TypeScript</span> </li>
+                                <li>Reactive interfaces: <span>React(FLUX,REDUX) with TypeScript, Riot</span></span>
+                                </li>
+                                <li>MVC/MVVM frameworks: <span>Angular, Knockout, Backbone</span> </li>
+                                <li>JS templates: <span>Lodash/Underscore, Handlebars, Mustache</span></li>
+                                <li>WebSocket and Native Canvas</li>
+                                <li>Canvas animation frameworks: <span>CreateJS, PlayCanvas</span></li>
+                            </ul>
+                        </div>
 
+                        <div class="item">
+                            <h6>HTML</h6>
+                            <span>HTML, HTML5, XML</span>
+                            <h6>CSS</h6>
+                            <ul>
+                                <li><span>CSS2.1, CSS3</span> </li>
+                                <li><span>LESS, SASS</span> </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <h5>Back-End</h5>
+                    <div class="row">
+                        <div class="item">
+                            <h6>PHP</h6>
+                            <ul>
+                                <li><span>Native PHP</span></li>
+                                <li><span>CakePhp Framework</span></li>
+                                <li><span>CMS as WordPress, LiveStreet, Joomla, OpenCart</span></li>
+                                <li><span>Apache</span></li>
+                            </ul>
+                            <h6>Python</h6>
+                            <span>Flask</span>
+                            <h6>NodeJs</h6>
+                            <span>Npm, Gulp, Bower, SocketIo, Express</span>
+
+                        </div>
+                        <div class="item">
+                            <h6>DataBase</h6>
+                            <ul>
+                                <li><span>MySQL</span></li>
+                                <li><span>PhpMyAdmin</span></li>
+                                <li><span>PDO</span></li>
+                                <li><span>ORM</span></li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                </div>
             </div>
         </div>
 
-        <div class="wrapper">
-            <div class="content-title">
-                <a name="education"></a>
-                <h3>Education</h3>
-            </div>
+        <div class="white-theme">
+            <div class="wrapper">
+                <div class="content-title">
+                    <a name="education"></a>
+                    <h3>Education</h3>
+                </div>
 
-            <div class="container">
-                <ul>
-                    <li><a href="https://www.vlsu.ru/">Vladimir State University, 2005-2010</a></li>
-                    <li>specialization: <span>Sequrity of information</span> </li>
-                </ul>
-                <ul>
-                    <li><span>Mechanical engineering college, Kirzhach, 2001-2005</span> </li>
-                    <li>specialization: <span> Software & automated systems</span> </li>
-                </ul>
-                <h6>Certificates:</h6>
-                <a href="https://stepik.org/cert/96405" target="_blank">Bioinformatics Institute: Python basics and
-                    application</a>
-                <a href="https://stepik.org/cert/71462" target="_blank">Bioinformatics Institute: Python programming</a>
-                <a href="https://stepik.org/cert/79851" target="_blank">Mail.ru: Web technologies</a>
-            </div>
-        </div>
-
-        <div class="wrapper">
-            <div class="content-title">
-                <a name="experience"></a>
-                <h3>Experience</h3>
-            </div>
-
-            <div class="container">
-                <ul>
-                    <li>
-                        <a href="https://ezan.ac.ru/" target="_blank">ФГУП ЭЗАН, Chernogolovka, Russia</a>
-                        <p><span>2021 - ...</span> </p>
-                        <p>System support engineer</p>
-                        <br>
-                    </li>
-                    <li>
-                        <a href="https://trytek.ru/" target="_blank">OOO "Трайтэк", Kirzhach, Russia</a>
-                        <p><span>2015 - 2021</span> </p>
-                        <p>Оptical cable splice specialist</p>
-                        <br>
-                    </li>
-                    <li>
-                        <a href="http://www.gorodkirzhach.ru/" target="_blank">МКУ "Управление городским хозяйством",
-                            Kirzhach, Russia</a>
-                        <p><span>2012 - 2015</span> </p>
-                        <p>Chief Technology Officer</p>
-                        <br>
-                    </li>
-                    <li>
-                        <a href="http://www.russianpost.ru/" target="_blank">УФПС Владимирской области филиал ФГУП
-                            "Почта России", Vladimir, Russia</a>
-                        <p><span>2008 - 2010</span> </p>
-                        <p>Software developer</p>
-                        <br>
-                    </li>
-                    <li>
-                        <a href="http://www.zavod-avtosvet.ru/" target="_blank">ОАО "Завод Автосвет", Kirzhach,
-                            Russia</a>
-                        <p><span>2004 - 2005</span> </p>
-                        <p>Software developer</p>
-                    </li>
-
-                </ul>
-
+                <div class="container">
+                    <ul>
+                        <li><a href="https://www.vlsu.ru/">Vladimir State University, 2005-2010</a></li>
+                        <li>specialization: <span>Sequrity of information</span> </li>
+                    </ul>
+                    <ul>
+                        <li><span>Mechanical engineering college, Kirzhach, 2001-2005</span> </li>
+                        <li>specialization: <span> Software & automated systems</span> </li>
+                    </ul>
+                    <h6>Certificates:</h6>
+                    <a href="https://stepik.org/cert/96405" target="_blank">Bioinformatics Institute: Python basics and
+                        application</a>
+                    <a href="https://stepik.org/cert/71462" target="_blank">Bioinformatics Institute: Python
+                        programming</a>
+                    <a href="https://stepik.org/cert/79851" target="_blank">Mail.ru: Web technologies</a>
+                </div>
             </div>
         </div>
+        <div class="dark-theme">
+            <div class="wrapper">
+                <div class="content-title">
+                    <a name="experience"></a>
+                    <h3>Experience</h3>
+                </div>
 
+                <div class="container">
+                    <ul>
+                        <li>
+                            <a href="https://ezan.ac.ru/" target="_blank">ФГУП ЭЗАН, Chernogolovka, Russia</a>
+                            <p><span>2021 - ...</span> </p>
+                            <p>System support engineer</p>
+                            <br>
+                        </li>
+                        <li>
+                            <a href="https://trytek.ru/" target="_blank">OOO "Трайтэк", Kirzhach, Russia</a>
+                            <p><span>2015 - 2021</span> </p>
+                            <p>Оptical cable splice specialist</p>
+                            <br>
+                        </li>
+                        <li>
+                            <a href="http://www.gorodkirzhach.ru/" target="_blank">МКУ "Управление городским
+                                хозяйством",
+                                Kirzhach, Russia</a>
+                            <p><span>2012 - 2015</span> </p>
+                            <p>Chief Technology Officer</p>
+                            <br>
+                        </li>
+                        <li>
+                            <a href="http://www.russianpost.ru/" target="_blank">УФПС Владимирской области филиал ФГУП
+                                "Почта России", Vladimir, Russia</a>
+                            <p><span>2008 - 2010</span> </p>
+                            <p>Software developer</p>
+                            <br>
+                        </li>
+                        <li>
+                            <a href="http://www.zavod-avtosvet.ru/" target="_blank">ОАО "Завод Автосвет", Kirzhach,
+                                Russia</a>
+                            <p><span>2004 - 2005</span> </p>
+                            <p>Software developer</p>
+                        </li>
+
+                    </ul>
+
+                </div>
+            </div>
+        </div>
     </main>
 
-    <footer class="footer">
+
+    <footer class="footer white-theme">
         <div class="wrapper">
             <div class="content-title">
                 <a name="recomendations"></a>
@@ -248,14 +258,14 @@
                 <div class="row">
                     <div class="item">
                         <b>Vladimir Putin, President</b>
-                        <p>8 800 200 23 16</p>
-                        <p>Kremlin, Moscow, Russia</p>
+                        <p><span>8 800 200 23 16</span></p>
+                        <p><span> Kremlin, Moscow, Russia</span> </p>
                         <a href="http://www.kremlin.ru/" target="_blank">www.kremlin.ru</a>
                     </div>
                     <div class="item">
                         <b>Vladimir Putin, President</b>
-                        <p>8 800 200 23 16</p>
-                        <p>Kremlin, Moscow, Russia</p>
+                        <p><span>8 800 200 23 16</span></p>
+                        <p><span> Kremlin, Moscow, Russia</span> </p>
                         <a href="http://www.kremlin.ru/" target="_blank">www.kremlin.ru</a>
                     </div>
 
@@ -264,14 +274,14 @@
                 <div class="row">
                     <div class="item">
                         <b>Vladimir Putin, President</b>
-                        <p>8 800 200 23 16</p>
-                        <p>Kremlin, Moscow, Russia</p>
+                        <p><span>8 800 200 23 16</span></p>
+                        <p><span> Kremlin, Moscow, Russia</span> </p>
                         <a href="http://www.kremlin.ru/" target="_blank">www.kremlin.ru</a>
                     </div>
                     <div class="item">
                         <b>Vladimir Putin, President</b>
-                        <p>8 800 200 23 16</p>
-                        <p>Kremlin, Moscow, Russia</p>
+                        <p><span>8 800 200 23 16</span></p>
+                        <p><span> Kremlin, Moscow, Russia</span> </p>
                         <a href="http://www.kremlin.ru/" target="_blank">www.kremlin.ru</a>
                     </div>
                 </div>
