--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
 
 <body>
     <a name="home"></a>
+    <nav id='navBar' class="nav-scroll nav">
+        <a href="#home" class="nav-item active">Home</a>
+        <a href="#about" class="nav-item">About</a>
+        <a href="#skills" class="nav-item">Skills</a>
+        <a href="#education" class="nav-item">Education</a>
+        <a href="#experience" class="nav-item">Experience</a>
+        <a href="#recomendations" class="nav-item">Recomendations</a>
+    </nav>
     <header class="header">
-        <div id="demo"></div>
+
         <div>
+
             <div class="mobile-nav">
                 <div class="mobile-nav-container">
                     <div class="menu-button"></div>
@@ -47,7 +56,7 @@
 
                     </div>
 
-                    <nav id='navBar' class="nav">
+                    <nav  class="nav">
                         <a href="#home" class="nav-item active">Home</a>
                         <a href="#about" class="nav-item">About</a>
                         <a href="#skills" class="nav-item">Skills</a>
