--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                         </h1>
 
                         <div class="btns">
-                            <a href="#" class="btn">Download CV in PDF</a>
-                            <a href="#" class="btn">Contact me</a>
+                            <a id="downloadCVbtn" href="#" class="btn">Download CV in PDF</a>
+                            <a id="contactMebtn"href="#" class="btn">Contact me</a>
                         </div>
 
                     </div>
 
-                    <nav  class="nav">
+                    <nav class="nav">
                         <a href="#home" class="nav-item active">Home</a>
                         <a href="#about" class="nav-item">About</a>
                         <a href="#skills" class="nav-item">Skills</a>
@@ -253,7 +253,7 @@
                 </div>
             </div>
         </div>
-        
+
     </main>
 
 
