add matrix effect

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <canvas id="canvasRain"></canvas>
 
     <nav id='navBar' class="nav-scroll nav">
         <a href="#home" class="nav-item active">Home</a>
@@ -21,7 +22,7 @@
     </nav>
     <header class="header">
 
-        <div>
+        <div class="white">
 
             <div class="mobile-nav">
                 <div class="mobile-nav-container">
@@ -301,7 +302,7 @@
     </footer>
 
     <script src="js/main.js"></script>
-
+    <script src="js/matrix-rain.js"></script>
 </body>
 
 </html>
