Fix rain position

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <canvas id="canvasRain"></canvas>
+    <canvas id="canvasRain" class="canvas-rain"></canvas>
 
     <nav id='navBar' class="nav-scroll nav">
         <a href="#home" class="nav-item active">Home</a>
@@ -22,7 +22,7 @@
     </nav>
     <header class="header">
 
-        <div class="white">
+        <div>
 
             <div class="mobile-nav">
                 <div class="mobile-nav-container">
