--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
     <header class="header">
 
-        <div>
+        <div class = "white">
 
             <div class="mobile-nav">
                 <div class="mobile-nav-container">
