add canvasBubbles module

--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
                 </div>
             </div>
         </div>
-
+        
         <div class="dark-theme">
+            <canvas id="canvasBubbles" class="canvas-bubbles"></canvas>
             <div class="wrapper">
+                
                 <div class="content-title">
                     <a name="skills"></a>
                     <h3>Skills</h3>
@@ -303,6 +305,7 @@
 
     <script src="js/main.js"></script>
     <script src="js/matrix-rain.js"></script>
+    <script src="js/bubbles.js"></script>
 </body>
 
 </html>
