add bubbles connection effect

--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
             </div>
         </div>
         <div class="dark-theme">
+            <canvas id="bubblesConnection" class="bubbles-connection"></canvas>
             <div class="wrapper">
                 <div class="content-title">
                     <a name="experience"></a>
@@ -306,6 +307,7 @@
     <script src="js/main.js"></script>
     <script src="js/matrix-rain.js"></script>
     <script src="js/bubbles.js"></script>
+    <script src="js/bubbles-connection.js"></script>
 </body>
 
 </html>
