--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         </div>
         <div class="dark-theme">
             <canvas id="bubblesConnection" class="bubbles-connection"></canvas>
-            <div class="wrapper">
+            <div class="wrapper experience">
                 <div class="content-title">
                     <a name="experience"></a>
                     <h3>Experience</h3>
